--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ body {
     box-shadow: 0 2px 4px rgba(0, 0, 0, .1), 0 8px 16px rgba(0, 0, 0, .1);
     box-sizing: border-box;
     margin: 40px 0 0;
-    padding: 11px 0 0px;
+    padding: 11px 0px;
     width: 396px;
     text-align: center;
 }
@@ -53,13 +53,15 @@ body {
 
 #login-btn {
     background-color: #1877f2;
-    font-weight: 600;
+    font-weight: 550;
+    letter-spacing: 0.2px;
     border: none;
     border-radius: 6px;
     font-size: 20px;
     line-height: 48px;
     padding: 0 16px;
     width: 365px;
+    margin-bottom: 7px;
 }
 
 #forget-btn {
@@ -72,18 +74,20 @@ body {
     align-items: center;
     border-bottom: 1px solid #dadde1;
     display: flex;
-    margin: 20px 16px;
+    margin: 10px 18px;
     text-align: center;
 }
 
 #create-btn {
     background-color: #42B72B;
     border: none;
-    font-weight: 600;
+    font-weight: 550;
+    letter-spacing: 0.2px;
     border-radius: 6px;
     font-size: 17px;
     line-height: 48px;
     padding: 0 16px;
+    margin-top: 18px;
 }
 
 #small-margin {
@@ -101,3 +105,25 @@ body {
     padding-left: 50px;
 }
 
+
+
+/* 1. rounded border
+2. 2. padding  */
+
+::-webkit-input-placeholder {
+    font-size: 17px!important;
+    padding-left: 5px;
+ }
+ 
+ :-moz-placeholder { /* Firefox 18- */
+    font-size: 17px!important;
+    padding-left: 5px;
+
+       
+ }
+ ::-moz-placeholder {  /* Firefox 19+ */
+    font-size: 17px!important;
+    padding-left: 5px;
+
+
+ }
